dotnetrdf-develop@lists.sf.net

See Acknowledgements.txt for full list of developers and contributors

Change Log
----------

This represents a summary of additions, changes and removals for the 0.7.2 release of dotNetRDF

Added
- Query
 - Added IsMinusCompatibleWith() method to ISet interface
 - Support for extended SPARQL Operators e.g. using + for Date Time arithmetic
 - Support for SPARQL property functions
  - Refactored Query.FullText to be a true property function


Changed
- Bug Fixes
 - Some logic fixes to AllegroGraphConnector and AllegroGraphServer
 - Bug fix to TreeIndexedTripleCollection
 - Bug fix to corner case MINUS logic in SPARQL 1.1
 - Bug fix to corner case GROUP BY and aggregate interaction logic
 - Bug fix to improve handling of & when outputting XML - Kal Ahmed
 - Bug fix for a logic flaw in GraphCollection exposed when deriving from GraphCollection caused by the refactor to use of MultiDictionary
 - Bug fix for a parsing error when property paths are nested in Blank Node predicate object lists
 - Bug fix for proper parser detection when selecting based on a .abc.gz filename
 - Bug fix for error in Lazy evaluation of some queries
 - Bug fix for subtle logic errors in SPARQL dataset resolution in some rare cases
- Core API
 - Made TreeIndexedTripleCollection the default triple collection implementation
- Storage
 - Moved IStorageServer implementations into separate classes (AllegroGraphServer, SesameServer and StardogServer)
 - Added ParentServer and AsyncParentServer properties to IStorageProvider and IAsyncStorageProvider

Removed
- Marked the TalisPlatformConnector as obsolete unusable
- Removed the obsolete Data.Sql library from the distribution
- Marked the now superseded IndexedTripleCollection and it's descendants as obsolete unusable
- Removed the obsolete ThreadSafeIndexedTripleCollection
- Removed IStoreParams
- Removed the old overloads of IStoreReader and IStoreWriter
- Removed the obsolete IGenericIOManager interfaces
   



