@@ -65,7 +65,7 @@ namespace VDS.RDF.Query.Algebra
         /// <returns></returns>
         public BaseMultiset Evaluate(SparqlEvaluationContext context)
         {
-            context.InputMultiset = context.Evaluate(this._pattern);//this._pattern.Evaluate(context);
+            context.InputMultiset = context.Evaluate(this._pattern);
 
             if (context.InputMultiset is IdentityMultiset || context.InputMultiset is NullMultiset)
             {
@@ -74,9 +74,13 @@ namespace VDS.RDF.Query.Algebra
             }
             else
             {
+                //Trim temporary variables
+                context.InputMultiset.Trim();
+
+                //Apply distinctness
                 context.OutputMultiset = new Multiset(context.InputMultiset.Variables);
                 IEnumerable<ISet> sets = context.InputMultiset.Sets.Distinct();
-                foreach (ISet s in context.InputMultiset.Sets.Distinct())
+                foreach (ISet s in sets)
                 {
                     context.OutputMultiset.Add(s.Copy());
                 }
